--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<title>{% block title %}Test Application{% endblock %}</title>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		
+		<link rel="stylesheet" href="css/style.css">
+		
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+		<div id="wrapper">
+			
+			<div id="mainHeader" class="col-lg-12 padding-none bg-danger " style="">
+			{% block header %}
+				<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom:0">
+					<div class="navbar-header">
+					Symfony 4
+					</div>
+					
+				</nav>
+			{% endblock %}	
+			</div>
+			
+			
+			<div class="col-lg-12 row">
+				<div class="col-lg-2 navbar-default sidebar" role="navigation" id="sidebar">
+					<div class="sidebar-nav navbar-collapse" >
+						{% block sidebar %}
+								<ul class="nav in">
+								<li ><a href="/adduser">Add</a></li>
+								</ul>
+						{% endblock %}
+					</div>
+				</div>
+
+				<div class="col-lg-10" id="content" style="margin:10px 0 0 0" >
+					{% block body %}{% endblock %}
+				</div>
+			</div>
+		</div>	
     </body>
 </html>
